<resources>
    <string name="app_name">LKS 2024</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="hint_password">Password</string>
    <string name="silahkan_isi_data_pribadi_anda">Silahkan isi data pribadi anda!</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah Punya Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>